--- a/bedak.html
+++ b/bedak.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="Toko online.css">
+	<link rel="stylesheet" type="text/css" href="Toko Online.css">
 
 	<title></title>
 </head>
