--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
             <nav>
                 <div class="wrapper">
                     <div class="nav_isi">
-                        <li><a href="Toko online.html">HOME</a></li>
+                        <li><a href="Toko Online.html">HOME</a></li>
                         <li class="active"><a href="product.html">PRODUCT</a></li>
                         <li class="dropdown">
                             <a href="kategori.html">
