--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
             <nav>
                 <div class="wrapper">
                     <div class="navisi">
-                        <li><a href="Toko online.html">HOME</a></li>
+                        <li><a href="Toko Online.html">HOME</a></li>
                         <li><a href="product.html">PRODUCT</a></li>
                         <li class="dropdown">
                             <a href="kategori.html">
