--- a/kategori.html
+++ b/kategori.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Toko Online Anna</title>
-    <link rel="stylesheet" type="text/css" href="Toko online.css">
+    <link rel="stylesheet" type="text/css" href="Toko Online.css">
     <link rel="icon" href="banner2.jpg" type="image/jpg">
 </head>
 <body>
