--- a/product.html
+++ b/product.html
@@ -120,7 +120,7 @@
         <div class="produk">
             <div class="contain">
                 <div class="box">
-                    <img src="moisturizer ovoskin.jpg">
+                    <img src="Moisturizer ovoskin.jpg">
                     <h4> Moisturizer Ovoskin </h4>
                     <h5> Rp.70.640 </h5>
                 </div>
